--- a/nginx.conf
+++ b/nginx.conf
@@ -34,7 +34,7 @@ server {
         autoindex_localtime on;
     }
 
-    location ~ ^/(test|i)$ {
+    location ~ ^/(i|test|sandbox)$ {
         rewrite ^/(\w+)$ /notepad.php?f=$1 last;
     }
 
@@ -63,3 +63,22 @@ server {
     }
 }
 
+server {
+    listen 443 ssl http2;
+    ssl on;
+    ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
+    ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+
+    server_name arm.phus.lu;
+
+    location / {
+        proxy_pass http://192.168.1.4:8080;
+        proxy_set_header Host $server_name;
+        proxy_read_timeout 90;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "Keep-Alive";
+    }
+}
