--- a/nginx.conf
+++ b/nginx.conf
@@ -77,6 +77,8 @@ server {
     location / {
         proxy_pass http://192.168.1.4:8080;
         proxy_set_header Host $server_name;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_read_timeout 90;
         proxy_http_version 1.1;
         proxy_set_header Connection "Keep-Alive";
