--- a/nginx.conf
+++ b/nginx.conf
@@ -4,7 +4,7 @@ server {
     ssl on;
     ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
     ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_protocols TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
 
@@ -68,7 +68,7 @@ server {
     ssl on;
     ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
     ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
-    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_protocols TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
 
