--- a/nginx.conf
+++ b/nginx.conf
@@ -8,7 +8,7 @@ server {
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
 
-    server_name phus.lu;
+    server_name phus.lu www.phus.lu ipv6.phus.lu;
     index index.html index.htm index.php default.html default.htm default.php;
     root  /home/phuslu/wwwroot;
 
@@ -34,7 +34,7 @@ server {
         autoindex_localtime on;
     }
 
-    location ~ ^/(i|test|sandbox)$ {
+    location ~ ^/(i|test)$ {
         rewrite ^/(\w+)$ /notepad.php?f=$1 last;
     }
 
@@ -84,3 +84,17 @@ server {
         proxy_set_header Connection "Keep-Alive";
     }
 }
+
+server {
+    listen 443 ssl http2;
+    ssl on;
+    ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
+    ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
+    ssl_protocols TLSv1.2;
+    ssl_prefer_server_ciphers on;
+    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+
+    server_name ~^(?<subdomain>\w+)\.phus\.lu$;
+    rewrite ^ https://phus.lu/$subdomain redirect;
+}
+
