--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,8 @@ server {
     listen 443 ssl http2 default_server;
     listen [::]:443 ssl http2 default_server;
     ssl on;
-    ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
-    ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
+    ssl_certificate /home/phuslu/.acme.sh/phus.lu_ecc/fullchain.cer;
+    ssl_certificate_key /home/phuslu/.acme.sh/phus.lu_ecc/phus.lu.key;
     ssl_protocols TLSv1.2;
     ssl_prefer_server_ciphers on;
     ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
