--- a/nginx.conf
+++ b/nginx.conf
@@ -17,7 +17,7 @@ server {
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
     #add_header Content-Security-Policy "default-src 'none'; script-src https: blob: 'sha256-sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8='; style-src https: ; img-src https: data:; child-src https:; connect-src 'self'; frame-src https://disqus.com;";
-
+    add_header X-Robots-Tag "noindex, nofollow";
 
     location ~ \.php$ {
         try_files $uri =404;
