update nginx conf
Signed-off-by: phuslu <phuslu@hotmail.com>

--- a/nginx.conf
+++ b/nginx.conf
@@ -4,11 +4,15 @@ server {
     ssl on;
     ssl_certificate /home/phuslu/.acme.sh/phus.lu_ecc/fullchain.cer;
     ssl_certificate_key /home/phuslu/.acme.sh/phus.lu_ecc/phus.lu.key;
+    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
     ssl_protocols TLSv1.2;
     ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+    ssl_session_cache shared:SSL:10m;
+    ssl_session_timeout 60m;
+    ssl_session_tickets on;
+    ssl_stapling on;
 
-    server_name phus.lu www.phus.lu ipv6.phus.lu;
+    server_name phus.lu ipv6.phus.lu;
     index index.html index.htm index.php default.html default.htm default.php;
     root  /home/phuslu/wwwroot;
 
@@ -20,6 +24,7 @@ server {
     add_header X-Robots-Tag "noindex, nofollow";
 
     location ~ \.php$ {
+        gzip on;
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
         fastcgi_pass unix:/var/run/php/php7.0-fpm.sock;
@@ -65,13 +70,12 @@ server {
 
 server {
     listen 443 ssl http2;
-    ssl on;
-    ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
-    ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
-    ssl_protocols TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+    server_name  www.phus.lu;
+    rewrite ^(.*) https://phus.lu$1 permanent;
+}
 
+server {
+    listen 443 ssl http2;
     server_name arm.phus.lu;
 
     location / {
@@ -83,18 +87,5 @@ server {
         proxy_http_version 1.1;
         proxy_set_header Connection "Keep-Alive";
     }
-}
-
-server {
-    listen 443 ssl http2;
-    ssl on;
-    ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
-    ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
-    ssl_protocols TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-
-    server_name ~^(?<subdomain>\w+)\.phus\.lu$;
-    rewrite ^ https://phus.lu/$subdomain redirect;
 }
 
