--- a/sysctl.conf
+++ b/sysctl.conf
@@ -32,8 +32,10 @@ net.ipv4.tcp_window_scaling = 0
 net.ipv4.tcp_sack = 0
 # 增大应用程序可用端口范围。
 net.ipv4.ip_local_port_range = 1024 65000
-# 使用 cubic 拥塞控制算法。
-net.ipv4.tcp_congestion_control = cubic
+# 指定 fair queue 算法, 为了配合 google bbr 算法
+net.core.default_qdisc = fq
+# 使用 google bbr 拥塞控制算法。
+net.ipv4.tcp_congestion_control = bbr
 # 系统中最多有多少个 TCP 套接字不被关联到任何一个用户文件句柄上
 net.ipv4.tcp_max_orphans = 131072
 # 以下参数和系统具体物理内存大小有关，最好查询文档以后配置最佳值
