--- a/sysctl.conf
+++ b/sysctl.conf
@@ -38,6 +38,8 @@ net.core.default_qdisc = fq
 net.ipv4.tcp_congestion_control = bbr
 # 系统中最多有多少个 TCP 套接字不被关联到任何一个用户文件句柄上
 net.ipv4.tcp_max_orphans = 131072
+# 当某个节点可用内存不足时, 系统会倾向于从其他节点分配内存。对 Mongo/Redis 类 cache 服务器友好
+vm.zone_reclaim_mode = 0
 # 以下参数和系统具体物理内存大小有关，最好查询文档以后配置最佳值
 net.core.wmem_default = 262144
 net.core.rmem_max = 16777216
