--- a/sysctl.conf
+++ b/sysctl.conf
@@ -40,6 +40,8 @@ net.ipv4.tcp_congestion_control = bbr
 net.ipv4.tcp_max_orphans = 131072
 # 当某个节点可用内存不足时, 系统会倾向于从其他节点分配内存。对 Mongo/Redis 类 cache 服务器友好
 vm.zone_reclaim_mode = 0
+# 内核执行无内存过量使用处理。使用这个设置会增大内存超载的可能性，但也可以增强大量使用内存任务 Mongo/Redis 的性能。
+vm.overcommit_memory = 1
 # 以下参数和系统具体物理内存大小有关，最好查询文档以后配置最佳值
 net.core.wmem_default = 262144
 net.core.rmem_max = 16777216
