--- a/nginx.conf
+++ b/nginx.conf
@@ -1,27 +1,27 @@
 server {
-    listen 443 ssl http2 default_server;
-    listen [::]:443 ssl http2 default_server;
-    ssl on;
-    ssl_certificate /home/phuslu/.acme.sh/phus.lu_ecc/fullchain.cer;
-    ssl_certificate_key /home/phuslu/.acme.sh/phus.lu_ecc/phus.lu.key;
-    ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-    ssl_protocols TLSv1.2;
-    ssl_prefer_server_ciphers on;
-    ssl_session_cache shared:SSL:10m;
-    ssl_session_timeout 60m;
-    ssl_session_tickets on;
-    ssl_stapling on;
+    #listen 443 ssl http2 default_server;
+    #ssl on;
+    #ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
+    #ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
+    #ssl_protocols TLSv1.2;
+    #ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+    #ssl_prefer_server_ciphers on;
+    #ssl_session_cache shared:SSL:10m;
+    #ssl_session_timeout 60m;
+    #ssl_session_tickets on;
+    #ssl_stapling on;
+
+    listen 80 default_server;
 
     server_name phus.lu ipv6.phus.lu;
     index index.html index.htm index.php default.html default.htm default.php;
     root  /home/phuslu/wwwroot;
 
     add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
-    add_header X-Frame-Options SAMEORIGIN;
+    add_header X-Robots-Tag "noindex, nofollow";
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
-    #add_header Content-Security-Policy "default-src 'none'; script-src https: blob: 'sha256-sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8='; style-src https: ; img-src https: data:; child-src https:; connect-src 'self'; frame-src https://disqus.com;";
-    add_header X-Robots-Tag "noindex, nofollow";
+    add_header X-Frame-Options SAMEORIGIN;
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -68,23 +68,8 @@ server {
 }
 
 server {
-    listen 443 ssl http2;
+    listen 80;
     server_name  www.phus.lu;
     rewrite ^(.*) https://phus.lu$1 permanent;
-}
-
-server {
-    listen 443 ssl http2;
-    server_name arm.phus.lu;
-
-    location / {
-        proxy_pass http://192.168.1.4:8080;
-        proxy_set_header Host $server_name;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_read_timeout 90;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "Keep-Alive";
-    }
 }
 
