--- a/nginx.conf
+++ b/nginx.conf
@@ -1,23 +1,11 @@
 server {
-    #listen 443 ssl http2 default_server;
-    #ssl on;
-    #ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
-    #ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
-    #ssl_protocols TLSv1.2;
-    #ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
-    #ssl_prefer_server_ciphers on;
-    #ssl_session_cache shared:SSL:10m;
-    #ssl_session_timeout 60m;
-    #ssl_session_tickets on;
-    #ssl_stapling on;
-
     listen 80 default_server;
 
-    server_name phus.lu ipv6.phus.lu;
+    server_name phus.lu;
     index index.html index.htm index.php default.html default.htm default.php;
     root  /home/phuslu/wwwroot;
 
-    add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+    #add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
     add_header X-Robots-Tag "noindex, nofollow";
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
@@ -60,10 +48,6 @@ server {
         proxy_read_timeout 90;
         proxy_http_version 1.1;
         proxy_set_header Connection "Keep-Alive";
-    }
-
-    location ~ ^/proxy/?$ {
-        return 301 http://phuslu.f3322.net:10;
     }
 }
 
