--- a/goproxy-vps.user.toml
+++ b/goproxy-vps.user.toml
@@ -1,13 +1,13 @@
 [default]
 log_level = 2
 
-[[server]]
+[[http2]]
 listen = ":443"
-server_name = "phus.lu"
+server_name = ["phus.lu"]
 proxy_fallback = "http://127.0.0.1:80"
 
-[[server]]
+[[http2]]
 listen = ":443"
-server_name = "proxy.phus.lu"
+server_name = ["proxy.phus.lu"]
 parent_proxy = "http://127.0.0.1:8080"
 proxy_auth_method = "pam"
