--- a/nginx.conf
+++ b/nginx.conf
@@ -50,3 +50,16 @@ server {
         proxy_set_header Connection "Keep-Alive";
     }
 }
+
+server {
+    listen 80;
+
+    server_name perf.phus.lu;
+
+    location / {
+        proxy_pass http://127.0.0.1:3000;
+        proxy_read_timeout 90;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "Keep-Alive";
+    }
+}
