add pam auth to phus.lu
Signed-off-by: Phus Lu <phuslu@hotmail.com>

--- a/goproxy-vps.user.toml
+++ b/goproxy-vps.user.toml
@@ -5,6 +5,7 @@ daemon_stderr = "/dev/null"
 [[http2]]
 listen = ":443"
 server_name = ["phus.lu", "perf.phus.lu"]
+proxy_auth_method = "pam"
 proxy_fallback = "http://127.0.0.1:80"
 keyfile = "/home/phuslu/drive/pem/phus.lu.pem"
 certfile = "/home/phuslu/drive/pem/phus.lu.pem"
