--- a/goproxy-vps.user.toml
+++ b/goproxy-vps.user.toml
@@ -4,7 +4,7 @@ daemon_stderr = "/dev/null"
 
 [[http2]]
 listen = ":443"
-server_name = ["phus.lu", "perf.phus.lu"]
+server_name = ["phus.lu", "grafana.phus.lu"]
 proxy_auth_method = "pam"
 proxy_fallback = "http://127.0.0.1:80"
 keyfile = "/home/phuslu/drive/pem/phus.lu.pem"
@@ -15,3 +15,5 @@ listen = ":443"
 server_name = ["proxy.phus.lu"]
 parent_proxy = "http://127.0.0.1:8080"
 proxy_auth_method = "pam"
+keyfile = "/home/phuslu/drive/pem/phus.lu.pem"
+certfile = "/home/phuslu/drive/pem/phus.lu.pem"
