--- a/nginx.conf
+++ b/nginx.conf
@@ -54,7 +54,7 @@ server {
 server {
     listen 80;
 
-    server_name perf.phus.lu;
+    server_name grafana.phus.lu;
 
     location / {
         proxy_pass http://127.0.0.1:3000;
