--- a/nginx.conf
+++ b/nginx.conf
@@ -1,4 +1,17 @@
 server {
+    #listen 443 ssl http2 default_server;
+    #listen [::]:443 ssl http2 default_server;
+    #ssl on;
+    #ssl_certificate /home/phuslu/.acme.sh/phus.lu_ecc/fullchain.cer;
+    #ssl_certificate_key /home/phuslu/.acme.sh/phus.lu_ecc/phus.lu.key;
+    #ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+    #ssl_protocols TLSv1.2;
+    #ssl_prefer_server_ciphers on;
+    #ssl_session_cache shared:SSL:10m;
+    #ssl_session_timeout 60m;
+    #ssl_session_tickets on;
+    #ssl_stapling on;
+    
     listen 80 default_server;
 
     server_name phus.lu;
