--- a/nginx.conf
+++ b/nginx.conf
@@ -11,7 +11,7 @@ server {
     #ssl_session_timeout 60m;
     #ssl_session_tickets on;
     #ssl_stapling on;
-    
+
     listen 80 default_server;
 
     server_name phus.lu;
@@ -46,21 +46,14 @@ server {
     location ~ /admin/ {
         rewrite ^/admin(/.*) $1 break;
         proxy_pass http://192.168.1.1:80;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_redirect   off;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "";
-    }
-
-    location /shell/ {
-        rewrite ^/shell/(.*) /$1 break;
-        proxy_pass http://127.0.0.1:4200;
         proxy_read_timeout 90;
+        proxy_redirect off;
         proxy_http_version 1.1;
         proxy_set_header Connection "Keep-Alive";
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
 
@@ -72,7 +65,12 @@ server {
     location / {
         proxy_pass http://127.0.0.1:3000;
         proxy_read_timeout 90;
+        proxy_redirect off;
         proxy_http_version 1.1;
         proxy_set_header Connection "Keep-Alive";
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Real-IP $remote_addr;
     }
 }
