--- a/goproxy-vps.user.toml
+++ b/goproxy-vps.user.toml
@@ -1,7 +1,6 @@
 [default]
 log_level = 2
 daemon_stderr = "./goproxy-vps.log"
-autocert_force_rsa = true
 
 [[http2]]
 listen = ":443"
@@ -12,6 +11,7 @@ proxy_fallback = "http://127.0.0.1:80"
 [[http2]]
 listen = ":443"
 server_name = ["jp.phus.lu"]
+sign_rsa_autocert = true
 parent_proxy = "https://c1.phus.lu:31150/"
 #proxy_auth_method = "pam"
 
