--- a/nginx.conf
+++ b/nginx.conf
@@ -24,6 +24,8 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Frame-Options SAMEORIGIN;
 
+    client_max_body_size 200M;
+
     location ~ \.php$ {
         try_files $uri =404;
         fastcgi_split_path_info ^(.+\.php)(/.+)$;
