--- a/nginx.conf
+++ b/nginx.conf
@@ -45,6 +45,16 @@ server {
         rewrite ^/(\w+)$ /notepad.php?f=$1 last;
     }
 
+    location ~ /metrics {
+        proxy_pass http://127.0.0.1:9100;
+        proxy_read_timeout 90;
+        proxy_redirect off;
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
     location ~ /admin/ {
         rewrite ^/admin(/.*) $1 break;
         proxy_pass http://192.168.1.1:80;
