--- a/stunnel.conf
+++ b/stunnel.conf
@@ -8,4 +8,5 @@ accept = 8443
 connect = 127.0.0.1:8080
 sslVersion = all
 #openssl req -x509 -nodes -newkey rsa:4096 -days 365 -keyout cert.pem -out cert.pem -subj '/C=US/OU=Web/CN=example.org'
+#openssl ecparam -genkey -name prime256v1 | tee cert.pem | openssl req -x509 -nodes -key /dev/stdin -days 365 -subj '/C=US/OU=Web/CN=example.org' | tee -a cert.pem
 cert = ./cert.pem
