--- a/nginx.conf
+++ b/nginx.conf
@@ -2,9 +2,9 @@ server {
     #listen 443 ssl http2 default_server;
     #listen [::]:443 ssl http2 default_server;
     #ssl on;
-    #ssl_certificate /home/phuslu/.acme.sh/phus.lu_ecc/fullchain.cer;
-    #ssl_certificate_key /home/phuslu/.acme.sh/phus.lu_ecc/phus.lu.key;
-    #ssl_ciphers EECDH+CHACHA20:EECDH+AES128:RSA+AES128:EECDH+AES256:RSA+AES256:EECDH+3DES:RSA+3DES:!MD5;
+    #ssl_certificate /home/phuslu/.acme.sh/phus.lu/fullchain.cer;
+    #ssl_certificate_key /home/phuslu/.acme.sh/phus.lu/phus.lu.key;
+    #ssl_ciphers ECDHE-ECDSA-AES256-GCM-SHA384:ECDHE-RSA-AES256-GCM-SHA384:ECDHE-ECDSA-CHACHA20-POLY1305:ECDHE-RSA-CHACHA20-POLY1305:ECDHE-ECDSA-AES128-GCM-SHA256:ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES256-SHA384:ECDHE-RSA-AES256-SHA384:ECDHE-ECDSA-AES128-SHA256:ECDHE-RSA-AES128-SHA256
     #ssl_protocols TLSv1.2;
     #ssl_prefer_server_ciphers on;
     #ssl_session_cache shared:SSL:10m;
@@ -24,7 +24,7 @@ server {
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Frame-Options SAMEORIGIN;
 
-    client_max_body_size 200M;
+    client_max_body_size 64M;
 
     location ~ \.php$ {
         try_files $uri =404;
@@ -49,19 +49,6 @@ server {
         proxy_pass http://127.0.0.1:9100;
         proxy_read_timeout 90;
         proxy_redirect off;
-        proxy_set_header Host $http_host;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
-        proxy_set_header X-Real-IP $remote_addr;
-    }
-
-    location ~ /admin/ {
-        rewrite ^/admin(/.*) $1 break;
-        proxy_pass http://192.168.1.1:80;
-        proxy_read_timeout 90;
-        proxy_redirect off;
-        proxy_http_version 1.1;
-        proxy_set_header Connection "Keep-Alive";
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
