--- a/nginx.conf
+++ b/nginx.conf
@@ -19,6 +19,7 @@ server {
     root  /home/phuslu/wwwroot;
 
     #add_header Strict-Transport-Security "max-age=63072000; includeSubDomains; preload";
+    #add_header Access-Control-Allow-Origin "*"; 
     add_header X-Robots-Tag "noindex, nofollow";
     add_header X-Content-Type-Options nosniff;
     add_header X-XSS-Protection "1; mode=block";
