udpate nginx.conf
Signed-off-by: Phus Lu <phuslu@hotmail.com>

--- a/nginx.conf
+++ b/nginx.conf
@@ -15,6 +15,7 @@ server {
     listen 80 default_server;
 
     server_name phus.lu;
+    charset utf-8;
     index index.html index.htm index.php default.html default.htm default.php;
     root  /home/phuslu/wwwroot;
 
