--- a/nginx.conf
+++ b/nginx.conf
@@ -50,11 +50,26 @@ server {
     location ~ /metrics {
         proxy_pass http://127.0.0.1:9100;
         proxy_read_timeout 90;
-        proxy_redirect off;
         proxy_set_header Host $http_host;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto https;
         proxy_set_header X-Real-IP $remote_addr;
+        proxy_redirect off;
+        #proxy_redirect http:// https://;
+    }
+
+    location ~ /gateway/ {
+        if ($request_uri ~ ";") {return 403;}
+        rewrite ^/gateway(/.*) $1 break;
+        proxy_pass http://192.168.1.1:80;
+        proxy_read_timeout 90;
+        proxy_http_version 1.1;
+        proxy_set_header Connection "Keep-Alive";
+        proxy_set_header Host $http_host;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto https;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_redirect off;
     }
 }
 
