add mimetypes for pac/md
Signed-off-by: Phus Lu <phuslu@hotmail.com>

--- a/nginx.conf
+++ b/nginx.conf
@@ -37,6 +37,10 @@ server {
         include fastcgi_params;
     }
 
+    location ~ \.(pac|md)$ {
+        default_type text/plain;
+    }
+
     location ~ /files/ {
         autoindex on;
         autoindex_localtime on;
